syntax = "proto3";

option java_package = "com.vrrpg.core.communication.model";
option java_multiple_files = true;

enum SocketGameMessageType {
    UNKNOWN = 0;
    JOIN = 1;
    MOVE = 2;
    LEAVE = 3;
    GET_STATE = 4;
    STATE = 5;
}

message SocketGameMessage {
    SocketGameMessageType event_type = 1;
    string event_source = 2;
    double x = 3;
    double y = 4;
    double z = 5;
}

message ApiGameDescription {
    string id = 1;
    string name = 2;
    repeated string objects = 3;
}

message ApiMeshDescription {
     string id = 1;
     string name = 2;
     string objectPath = 3;
     double posX = 4;
     double posY = 5;
     double posZ = 6;
     double scale = 7;
}
